fix alignment of action timestamps in IE

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -250,6 +250,7 @@ h1 {
       opacity: 0.4;
       float: none;
       font-size: 12px;
+      clear: left;
     }
     &__text {
       float: left;
